--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../Train-Time/Assets/css/style.css">
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
@@ -40,11 +42,11 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td id="column1"></td>
+                        <td id="column2"></td>
+                        <td id="column3"></td>
+                        <td id="column4"></td>
+                        <td id="column5"></td>
                     </tr>
                 </tbody> 
             </table>
@@ -62,7 +64,7 @@
                     <input type="destination" class="form-control" id="destination" placeholder="">
                 </div>
                 <div class="form-group">
-                    <label for="firstTrainTime">First Train Time (HH mm - military time):</label>
+                    <label for="firstTrainTime">First Train Time (HH:mm - military time):</label>
                     <input type="firstTrainTime" class="form-control" id="firstTrainTime" placeholder="">
                 </div>
                 <div class="form-group">
@@ -73,7 +75,6 @@
         </form>
     </div>
     <script type="text/javascript" src="Assets/javascript/train.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
 </body>
 
 </html>
