--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="containter">
-        <div class="jumbotron">
+        <div class="header">
             <h1>Train Schedule</h1>
         </div>
         <br>
