--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 
 <body>
     <div class="containter">
-        <div class="header">
-            <h1>Train Schedule</h1>
-        </div>
+            <div class="hero-image">
+                    <div class="hero-text">
+                      <h1 style="font-size:75px">Train Schedule</h1>
+                      <h3>All Aboard!</h3>
+                    </div>
+                  </div>
         <br>
             <table class="table table-bordered">
                 <thead class="thead-light">
